# jolly-feynman

fractal/: CMakeLists.txt  README.md  build.sh  imgui.ini  main.cpp  opengl_shader.cpp  opengl_shader.h  run.bat  run.sh
fractal/shaders/: fragment.glsl  vertex.glsl
object_viewer/: CMakeLists.txt  README.md  run.bat  run.sh
object_viewer/shaders/: scene_fragment.glsl  scene_vertex.glsl  skybox_vertex.glsl
object_viewer/src/: camera.hpp  main.cpp  mesh.hpp  model.hpp  shader_program.hpp  skybox.hpp
scene/: CMakeLists.txt  README.md  build.sh  run.sh
scene-with-lighthouse/: .gitignore  conanfile.txt  run-no-forward-compat.bat  run-no-forward-compat.sh  run.bat
scene-with-lighthouse/assets/models/boat/: boat.mtl
scene-with-lighthouse/shaders/: common_object_fragment.glsl  simple_object_vertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl  water_fragment.glsl
scene-with-lighthouse/src/: camera.hpp  heightmap.hpp  light.hpp  main.cpp  model.hpp  shadows.hpp  simple_cube.hpp  stb_image_wrapper.hpp  ui.hpp  water.hpp
scene/shaders/: common_object_vertex.glsl  depth_fragment.glsl  terrain_fragment.glsl  water_fragment.glsl  water_vertex.glsl
scene/src/: main.cpp  mesh.hpp  model.hpp  shader_program.cpp  shader_program.hpp  utility.hpp
